kustomize/overlays/dev/svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: my-node-app
    environment: dev
spec:
  selector:
    app: my-node-app  # Ensures service routes traffic to correct pods
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
